# routes-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  routesanalysis.spec
docs/: 优化规划.md  使用指南.md  开发记录.md  需求设计.md  项目讨论归档.md
routesanalysis/: __init__.py  analyzer.py  comparator.py  config.py  config.yaml  exporter.py  main.py  models.py  parser.py
routesanalysis/comparison/: __init__.py  comparator.py  excel.py
routesanalysis/export/: __init__.py  base.py  comparison.py  multi_group.py
routesanalysis/models/: __init__.py  common.py  compare.py
routesanalysis/parsing/: __init__.py  core.py  regex_engine.py  textfsm_engine.py
routesanalysis/templates/: huawei_bgp_routing_table.textfsm  huawei_interface_description.textfsm
scripts/: build.bat  build.sh  routesanalysis.spec
tests/: test_analyzer.py  test_comparator.py  test_exporter.py
tests/fixtures/: sample_huawei_bgp.txt  sample_huawei_bgp2.txt  sample_huawei_bgp3.txt  sample_huawei_bgp_ecmp.txt  sample_huawei_bgp_ecmp2.txt  sample_huawei_bgp_ecmp3.txt  sample_huawei_bgp_ecmp4.txt  sample_huawei_bgp_ecmp5.txt  sample_huawei_bgp_ecmp5_reversed.txt  sample_huawei_bgp_ecmp6.txt  sample_huawei_bgp_ecmp7.txt  sample_invalid.txt  sample_me_01.txt
